--- a/homeless_project/shelter_deaths.ipynb
+++ b/homeless_project/shelter_deaths.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -14,26 +14,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "High five! You successfully sent some data to your account on plotly. View your plot in your browser at https://plot.ly/~joshua-t-loong/0 or inside your plot.ly account where it is named 'basic-line'\n"
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\plotly\\graph_objs\\_deprecations.py:39: DeprecationWarning:\n",
+      "\n",
+      "plotly.graph_objs.Data is deprecated.\n",
+      "Please replace it with a list or tuple of instances of the following types\n",
+      "  - plotly.graph_objs.Scatter\n",
+      "  - plotly.graph_objs.Bar\n",
+      "  - plotly.graph_objs.Area\n",
+      "  - plotly.graph_objs.Histogram\n",
+      "  - etc.\n",
+      "\n",
+      "\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~joshua-t-loong/0.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~joshua-t-loong/30.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +72,7 @@
     "\n",
     "fig = dict(data=data, layout=layout)\n",
     "\n",
-    "py.iplot(fig, filename = 'basic-line')"
+    "py.iplot(fig, filename = 'homeless')"
    ]
   },
   {
