Updated new yorker data

--- a/new-yorker/analysis.ipynb
+++ b/new-yorker/analysis.ipynb
@@ -2,147 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from tabulate import tabulate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('new-yorker.csv')"
+    "run_1 = pd.read_csv('new-yorker-1.csv')\n",
+    "run_2 = pd.read_csv('new-yorker-2.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date_issued</th>\n",
-       "      <th>author</th>\n",
-       "      <th>title</th>\n",
-       "      <th>description</th>\n",
-       "      <th>link</th>\n",
-       "      <th>page</th>\n",
-       "      <th>issue</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3295</th>\n",
-       "      <td>1972/04/15</td>\n",
-       "      <td>Isaac Bashevis Singer</td>\n",
-       "      <td>A Crown of Feathers</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>https://newyorker.com/magazine/1972/04/15/a-cr...</td>\n",
-       "      <td>329</td>\n",
-       "      <td>April 15, 1972 Issue</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3296</th>\n",
-       "      <td>1972/04/15</td>\n",
-       "      <td>Sylvia Townsend Warner</td>\n",
-       "      <td>The Inside-Out</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>https://newyorker.com/magazine/1972/04/15/the-...</td>\n",
-       "      <td>329</td>\n",
-       "      <td>April 15, 1972 Issue</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3297</th>\n",
-       "      <td>1972/04/15</td>\n",
-       "      <td>Csikszentmihalyi Mihaly</td>\n",
-       "      <td>A Sliver At Night</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>https://newyorker.com/magazine/1972/04/15/a-sl...</td>\n",
-       "      <td>329</td>\n",
-       "      <td>April 15, 1972 Issue</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3298</th>\n",
-       "      <td>1972/04/08</td>\n",
-       "      <td>S. J. Perelman</td>\n",
-       "      <td>Meanwhile, Back At The Crunch...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>https://newyorker.com/magazine/1972/04/08/mean...</td>\n",
-       "      <td>329</td>\n",
-       "      <td>April 8, 1972 Issue</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3299</th>\n",
-       "      <td>1972/04/08</td>\n",
-       "      <td>Alexander Frater</td>\n",
-       "      <td>The Scribe</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>https://newyorker.com/magazine/1972/04/08/the-...</td>\n",
-       "      <td>329</td>\n",
-       "      <td>April 8, 1972 Issue</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     date_issued                   author                             title  \\\n",
-       "3295  1972/04/15    Isaac Bashevis Singer               A Crown of Feathers   \n",
-       "3296  1972/04/15   Sylvia Townsend Warner                    The Inside-Out   \n",
-       "3297  1972/04/15  Csikszentmihalyi Mihaly                 A Sliver At Night   \n",
-       "3298  1972/04/08           S. J. Perelman  Meanwhile, Back At The Crunch...   \n",
-       "3299  1972/04/08         Alexander Frater                        The Scribe   \n",
-       "\n",
-       "     description                                               link  page  \\\n",
-       "3295         NaN  https://newyorker.com/magazine/1972/04/15/a-cr...   329   \n",
-       "3296         NaN  https://newyorker.com/magazine/1972/04/15/the-...   329   \n",
-       "3297         NaN  https://newyorker.com/magazine/1972/04/15/a-sl...   329   \n",
-       "3298         NaN  https://newyorker.com/magazine/1972/04/08/mean...   329   \n",
-       "3299         NaN  https://newyorker.com/magazine/1972/04/08/the-...   329   \n",
-       "\n",
-       "                     issue  \n",
-       "3295  April 15, 1972 Issue  \n",
-       "3296  April 15, 1972 Issue  \n",
-       "3297  April 15, 1972 Issue  \n",
-       "3298   April 8, 1972 Issue  \n",
-       "3299   April 8, 1972 Issue  "
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data.tail()"
+    "data = run_1.append(run_2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,362 +40,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table = counts.sort_values(by=['link'], ascending=False).head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>link</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>author</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>John Updike</th>\n",
-       "      <td>79</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Donald Barthelme</th>\n",
-       "      <td>70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Alice Munro</th>\n",
-       "      <td>55</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Mavis Gallant</th>\n",
-       "      <td>53</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Isaac Bashevis Singer</th>\n",
-       "      <td>49</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Ann Beattie</th>\n",
-       "      <td>48</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>William Trevor</th>\n",
-       "      <td>45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>George W. S. Trow</th>\n",
-       "      <td>44</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Veronica Geng</th>\n",
-       "      <td>43</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Edna O'Brien</th>\n",
-       "      <td>39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Garrison Keillor</th>\n",
-       "      <td>38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Ian Frazier</th>\n",
-       "      <td>33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Penelope Gilliatt</th>\n",
-       "      <td>29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>T. Coraghessan Boyle</th>\n",
-       "      <td>29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Haruki Murakami</th>\n",
-       "      <td>28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Saul Steinberg</th>\n",
-       "      <td>28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>S. J. Perelman</th>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Bruce McCall</th>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sylvia Townsend Warner</th>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Arturo Vivante</th>\n",
-       "      <td>23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Alice Adams</th>\n",
-       "      <td>23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>W. S. Merwin</th>\n",
-       "      <td>23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Frederick Barthelme</th>\n",
-       "      <td>23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>George Saunders</th>\n",
-       "      <td>22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Jamaica Kincaid</th>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Daniel Menaker</th>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Louise Erdrich</th>\n",
-       "      <td>19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Mary A. Robison</th>\n",
-       "      <td>19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Thomas McGuane</th>\n",
-       "      <td>19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Tessa Hadley</th>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>John F. Callahan</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>John Falsey</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>John McNulty</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>John Nathan</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>John Skow</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>James Robinson</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Jonas Hassen Khemiri</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Jonathan Mark</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Joseph Epstein</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>A. L. Kennedy</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Joyce Warren</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Judith Small</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>John Carroll</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>John Batki</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>John Ash</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Joel Gross</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Joel Agee</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Joan Silber</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Jim Gavin</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Jim Crace</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Jessica Shattuck</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Jess Row</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Jensen Beach</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Jean McGarry</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Jay Mclnerney</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Javier Marías</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Janet Nichols</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Jamey Gambrell</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>James Salter</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Zinovy Zinik</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>828 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        link\n",
-       "author                      \n",
-       "John Updike               79\n",
-       "Donald Barthelme          70\n",
-       "Alice Munro               55\n",
-       "Mavis Gallant             53\n",
-       "Isaac Bashevis Singer     49\n",
-       "Ann Beattie               48\n",
-       "William Trevor            45\n",
-       "George W. S. Trow         44\n",
-       "Veronica Geng             43\n",
-       "Edna O'Brien              39\n",
-       "Garrison Keillor          38\n",
-       "Ian Frazier               33\n",
-       "Penelope Gilliatt         29\n",
-       "T. Coraghessan Boyle      29\n",
-       "Haruki Murakami           28\n",
-       "Saul Steinberg            28\n",
-       "S. J. Perelman            25\n",
-       "Bruce McCall              24\n",
-       "Sylvia Townsend Warner    24\n",
-       "Arturo Vivante            23\n",
-       "Alice Adams               23\n",
-       "W. S. Merwin              23\n",
-       "Frederick Barthelme       23\n",
-       "George Saunders           22\n",
-       "Jamaica Kincaid           21\n",
-       "Daniel Menaker            21\n",
-       "Louise Erdrich            19\n",
-       "Mary A. Robison           19\n",
-       "Thomas McGuane            19\n",
-       "Tessa Hadley              18\n",
-       "...                      ...\n",
-       "John F. Callahan           1\n",
-       "John Falsey                1\n",
-       "John McNulty               1\n",
-       "John Nathan                1\n",
-       "John Skow                  1\n",
-       "James Robinson             1\n",
-       "Jonas Hassen Khemiri       1\n",
-       "Jonathan Mark              1\n",
-       "Joseph Epstein             1\n",
-       "A. L. Kennedy              1\n",
-       "Joyce Warren               1\n",
-       "Judith Small               1\n",
-       "John Carroll               1\n",
-       "John Batki                 1\n",
-       "John Ash                   1\n",
-       "Joel Gross                 1\n",
-       "Joel Agee                  1\n",
-       "Joan Silber                1\n",
-       "Jim Gavin                  1\n",
-       "Jim Crace                  1\n",
-       "Jessica Shattuck           1\n",
-       "Jess Row                   1\n",
-       "Jensen Beach               1\n",
-       "Jean McGarry               1\n",
-       "Jay Mclnerney              1\n",
-       "Javier Marías              1\n",
-       "Janet Nichols              1\n",
-       "Jamey Gambrell             1\n",
-       "James Salter               1\n",
-       "Zinovy Zinik               1\n",
-       "\n",
-       "[828 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<table>\n",
+      "<thead>\n",
+      "<tr><th>Author                </th><th style=\"text-align: right;\">  # of Stories</th></tr>\n",
+      "</thead>\n",
+      "<tbody>\n",
+      "<tr><td>S. J. Perelman        </td><td style=\"text-align: right;\">           271</td></tr>\n",
+      "<tr><td>James Thurber         </td><td style=\"text-align: right;\">           270</td></tr>\n",
+      "<tr><td>John O'Hara           </td><td style=\"text-align: right;\">           226</td></tr>\n",
+      "<tr><td>Frank Sullivan        </td><td style=\"text-align: right;\">           191</td></tr>\n",
+      "<tr><td>W. E. Farbstein       </td><td style=\"text-align: right;\">           184</td></tr>\n",
+      "<tr><td>E. B. White           </td><td style=\"text-align: right;\">           179</td></tr>\n",
+      "<tr><td>John Updike           </td><td style=\"text-align: right;\">           169</td></tr>\n",
+      "<tr><td>Sylvia Townsend Warner</td><td style=\"text-align: right;\">           152</td></tr>\n",
+      "<tr><td>Arthur Kober          </td><td style=\"text-align: right;\">           151</td></tr>\n",
+      "<tr><td>Wolcott Gibbs         </td><td style=\"text-align: right;\">           142</td></tr>\n",
+      "</tbody>\n",
+      "</table>\n"
+     ]
     }
    ],
    "source": [
-    "counts.sort_values(by=['link'], ascending=False)"
+    "print(tabulate(table, ['Author', '# of Stories'], tablefmt=\"html\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('new-yorker-full.csv', index=False)"
    ]
   },
   {
