Added new files to bball_variance

--- a/new-yorker/analysis.ipynb
+++ b/new-yorker/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13290"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['link'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2327"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['author'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +147,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "link    1245\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ordered[ordered.link == 1].count()   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5350236355822948"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1245 / 2327"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,6 +241,81 @@
     "plt.xticks(fontsize=15)\n",
     "plt.ylabel('Author', fontsize=15)\n",
     "plt.xlabel('Number of Publications',fontsize=15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.graph_objs as go\n",
+    "import plotly.plotly as py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\plotly\\graph_objs\\_deprecations.py:396: DeprecationWarning:\n",
+      "\n",
+      "plotly.graph_objs.Margin is deprecated.\n",
+      "Please replace it with one of the following more specific types\n",
+      "  - plotly.graph_objs.layout.Margin\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~joshua-t-loong/32.embed\" height=\"2500px\" width=\"590px\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph_data = [go.Bar(\n",
+    "            x=heights[::-1],\n",
+    "            y=ordered.index.values.tolist()[:len(heights)][::-1],\n",
+    "            orientation = 'h',\n",
+    "            marker=dict(\n",
+    "                color='rgba(50, 171, 96, 0.6)',\n",
+    "                line=dict(\n",
+    "                    color='rgba(50, 171, 96, 1.0)',\n",
+    "                    width=1),),\n",
+    "            name='The Most Published Authors in the New Yorker (>10 Publications)'\n",
+    "    \n",
+    "    )]\n",
+    "layout = go.Layout(\n",
+    "    title='The Most Published Authors in the New Yorker (>10 Publications)',\n",
+    "    xaxis=dict(\n",
+    "        title='Number of Published Stories'\n",
+    "    ),\n",
+    "    autosize=False,\n",
+    "    width=590,\n",
+    "    height=2500,\n",
+    "    margin=go.Margin(\n",
+    "        l=180\n",
+    "    ),\n",
+    "    paper_bgcolor='white',\n",
+    "    plot_bgcolor='white'\n",
+    ")\n",
+    "\n",
+    "fig = go.Figure(data=graph_data, layout=layout)\n",
+    "\n",
+    "py.iplot(fig, filename='new-yorker')"
    ]
   },
   {
